--- a/src/gospelcenter/PageBundle/Resources/views/Page/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/youth.html.twig
@@ -7,7 +7,7 @@
 
 
 {% block body %}
-    <h1 class="titlePage"><span>Youth</span></h1>
+    <h1 class="titlePage"><span>{{ 'gc.title.youth'|trans }}</span></h1>
 
     <section class="tab autoScroll">
         <nav class="sub_nav complex">
