--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -30,11 +30,11 @@
 <nav class="sub_nav">
     {% spaceless %}
         <ul>
-            <li><a href="#about" class="current focus">A propos</a></li>
+            <li><a href="#about" class="current focus">About</a></li>
             <li><a href="#leadership">Leadership</a></li>
             <li><a href="#staff">Staff</a></li>
-            <li><a href="#what-we-believe">Confession de foi</a></li>
-            <li><a href="#music">Musique</a></li>
+            <li><a href="#what-we-believe">Statement of Faith</a></li>
+            <li><a href="#music">Music</a></li>
         </ul>
     {% endspaceless %}
 </nav>
@@ -43,11 +43,14 @@
 
     <h1>A place where miracles happen!</h1>
 
-    <img class="big" src="{{ asset('bundles/gospelcenterpage/images/a-propos.jpg') }}" srcset="{{ asset('bundles/gospelcenterpage/images/a-propos_2x.jpg') }} 2x">
+    <img class="big" src="{{ asset('bundles/gospelcenterpage/images/a-propos.jpg') }}"
+         srcset="{{ asset('bundles/gospelcenterpage/images/a-propos_2x.jpg') }} 2x">
 
     <h2 class="underline"><span>Qui</span></h2>
 
-    <p>Le Gospel Center Lausanne est membre du Réseau évangélique suisse (<a target="_blank" href="http://www.evangelique.ch">RES</a>), et de la Fédération romande des Églises
+    <p>Le Gospel Center Lausanne est membre du Réseau évangélique suisse (<a target="_blank"
+                                                                             href="http://www.evangelique.ch">RES</a>),
+        et de la Fédération romande des Églises
         évangéliques (<a target="_blank" href="http://www.lafree.ch">FREE</a>).</p>
 
     <h2 class="underline"><span>Comment</span></h2>
@@ -149,8 +152,8 @@
 
 <article class="tab default" id="staff">
 
-    <h2 class="slogan">Le staff du Gospel Center Lausanne est une équipe
-        dynamique qui désire effectuer un travail de qualité.</h2>
+    <h2 class="slogan">The staff of the Gospel Center Lausanne is a dynamic team that wishes to perform quality
+        work.</h2>
 
     <article class="frame">
         <h1>Coord. de l'équipe pastorale</h1>
@@ -240,9 +243,10 @@
 
 <article class="tab blog-style" id="what-we-believe">
 
-    <h1>Ce que nous croyons</h1>
+    <h1>What we believe</h1>
 
-    <img class="big" src="{{ asset('bundles/gospelcenterpage/images/confession.jpg') }}" srcset="{{ asset('bundles/gospelcenterpage/images/confession_2x.jpg') }} 2x">
+    <img class="big" src="{{ asset('bundles/gospelcenterpage/images/confession.jpg') }}"
+         srcset="{{ asset('bundles/gospelcenterpage/images/confession_2x.jpg') }} 2x">
 
     <p>Nous croyons que la Bible est inspirée par Dieu. La Parole de Dieu est la base unique de notre foi, de notre
         doctrine, et conduit nos actions.</p>
@@ -261,8 +265,8 @@
 
 <article class="tab" id="music">
 
-    <h2 class="slogan">Le groupe désire encourager le corps de Christ par une
-        louange dynamique de qualité, positive et puissante.</h2>
+    <h2 class="slogan">The band wants to encourage the body of Christ in a positive and powerful dynamic praise
+        quality.</h2>
 
     <section class="slider" id="1">
 
