--- a/web/sass/advanced/_home.scss
+++ b/web/sass/advanced/_home.scss
@@ -251,6 +251,22 @@
         }
     }
 
+    @media only screen and (max-width: 800px) {
+        & > header {
+            section.center {
+                a.logo {
+                    height: auto;
+                    width: 95%;
+
+                    img {
+                        width: 100%;
+                        height: auto;
+                    }
+                }
+            }
+        }
+    }
+
     @media only screen and (max-width: $mobileH) {
 
         & > header {
