--- a/app/Resources/views/nav/local.html.twig
+++ b/app/Resources/views/nav/local.html.twig
@@ -1,14 +1,14 @@
 <li class="home"><a href="{{ path('gospelcenterPage_home', {'center': center.ref}) }}"
-       {% if page == 'home' %}class="current focus"{% endif %}>Home</a></li>
+       {% if page == 'home' %}class="current focus"{% endif %}>{{ 'gc.nav.home'|trans }}</a></li>
 <li><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'celebrations'}) }}"
-       {% if page == 'celebrations' %}class="current focus"{% endif %}>Celebrations</a></li>
+       {% if page == 'celebrations' %}class="current focus"{% endif %}>{{ 'gc.nav.celebrations'|trans }}</a></li>
 <li><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'about'}) }}"
-       {% if page == 'about' %}class="current focus"{% endif %}>About</a></li>
+       {% if page == 'about' %}class="current focus"{% endif %}>{{ 'gc.nav.about'|trans }}</a></li>
 <li><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'bases'}) }}"
-       {% if page == 'bases' %}class="current focus"{% endif %}>Bases</a></li>
+       {% if page == 'bases' %}class="current focus"{% endif %}>{{ 'gc.nav.bases'|trans }}</a></li>
 <li><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'youth'}) }}"
-       {% if page == 'youth' %}class="current focus"{% endif %}>Youth</a></li>
+       {% if page == 'youth' %}class="current focus"{% endif %}>{{ 'gc.nav.youth'|trans }}</a></li>
 <li><a href="{{ path('gospelcenterEvents_list', {'center': center.ref}) }}"
-       {% if page == 'events' %}class="current focus"{% endif %}>Events</a></li>
+       {% if page == 'events' %}class="current focus"{% endif %}>{{ 'gc.nav.events'|trans }}</a></li>
 <li><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'contact'}) }}"
-       {% if page == 'contact' %}class="current focus"{% endif %}>Contact</a></li>
+       {% if page == 'contact' %}class="current focus"{% endif %}>{{ 'gc.nav.contact'|trans }}</a></li>
