--- a/web/css/layoutNew.css
+++ b/web/css/layoutNew.css
@@ -818,9 +818,74 @@ nav.sub_nav {
       #page > footer .container nav.main {
         border-top: 1px solid #FDFDFC;
         border-bottom: 1px solid #FDFDFC; }
+        #page > footer .container nav.main ul {
+          display: inline-block;
+          vert-align: top; }
         #page > footer .container nav.main li a {
           padding-right: 20px;
           line-height: 37px; }
+        #page > footer .container nav.main div.lang-nav {
+          display: inline-block;
+          vert-align: top;
+          float: right; }
+          #page > footer .container nav.main div.lang-nav span {
+            display: block;
+            font-size: 0.9em;
+            font-family: "Radikal-Light", "Radikal", sans-serif;
+            line-height: 37px;
+            padding-right: 20px;
+            cursor: pointer;
+            background-image: url("../images/select_arrow_white.svg");
+            background-size: normal;
+            background-position: right top;
+            background-repeat: no-repeat; }
+            #page > footer .container nav.main div.lang-nav span:hover {
+              color: #878787;
+              background-position: right bottom; }
+          #page > footer .container nav.main div.lang-nav div.param_arrow {
+            z-index: 1001;
+            position: absolute;
+            right: 27px;
+            bottom: 35px;
+            display: none; }
+          #page > footer .container nav.main div.lang-nav div.arrow_up_border {
+            width: 0;
+            height: 0; }
+          #page > footer .container nav.main div.lang-nav div.arrow_up {
+            width: 0;
+            height: 0;
+            border-left: 11px solid transparent;
+            border-right: 11px solid transparent;
+            border-top: 10px solid #FDFDFC;
+            margin-left: 0px;
+            margin-top: -9px; }
+          #page > footer .container nav.main div.lang-nav.actived ul {
+            display: block; }
+          #page > footer .container nav.main div.lang-nav.actived div.param_arrow {
+            display: block; }
+          #page > footer .container nav.main div.lang-nav ul {
+            display: none;
+            position: absolute;
+            background-color: #FDFDFC;
+            border: 1px solid #FDFDFC;
+            vert-align: bottom;
+            bottom: 44px;
+            right: 5px;
+            width: 150px; }
+            #page > footer .container nav.main div.lang-nav ul li {
+              display: block;
+              margin: 0; }
+              #page > footer .container nav.main div.lang-nav ul li a {
+                display: block;
+                line-height: 1.6em;
+                color: #363331;
+                font-family: "Radikal-Light", "Radikal", sans-serif;
+                font-size: 1em;
+                padding: 4px 0 0 8px;
+                background-color: #FDFDFC; }
+                #page > footer .container nav.main div.lang-nav ul li a:hover {
+                  background-color: #363331;
+                  color: #FDFDFC; }
       #page > footer .container nav li {
         list-style: none;
         display: inline-block; }
@@ -836,6 +901,25 @@ nav.sub_nav {
     #page > footer .container {
       width: auto;
       margin: 0 16px; } }
+  @media only screen and (max-width: 800px) {
+    #page > footer .container nav.main div.lang-nav {
+      display: block;
+      float: none;
+      border-top: 1px solid #FDFDFC;
+      text-align: center; }
+      #page > footer .container nav.main div.lang-nav span {
+        display: inline-block; }
+      #page > footer .container nav.main div.lang-nav div.param_arrow {
+        right: 50%;
+        margin-right: -10px;
+        bottom: 28px; }
+      #page > footer .container nav.main div.lang-nav ul {
+        right: 50%;
+        padding: 0;
+        bottom: 37px;
+        margin-right: -75px; }
+        #page > footer .container nav.main div.lang-nav ul li a {
+          padding-left: 0; } }
   @media only screen and (max-width: 640px) {
     #page > footer {
       padding-bottom: 20px;
@@ -861,7 +945,17 @@ nav.sub_nav {
               right: inherit;
               bottom: inherit; }
           #page > footer .container nav.main ul li a {
-            padding: 0 10px; } }
+            padding: 0 10px; }
+          #page > footer .container nav.main div.lang-nav span {
+            font-size: 1.2em; }
+          #page > footer .container nav.main div.lang-nav ul {
+            left: 0px;
+            right: 0px;
+            width: auto;
+            margin-right: 0; }
+            #page > footer .container nav.main div.lang-nav ul li a {
+              font-size: 1.4em;
+              line-height: 2em; } }
 
 section.map_full {
   display: block;
@@ -1185,6 +1279,13 @@ section.map_full {
   @media only screen and (max-width: 980px) {
     #page.home section#nextEvents section.mediaList .more {
       display: none; } }
+@media only screen and (max-width: 800px) {
+  #page.home > header section.center a.logo {
+    height: auto;
+    width: 95%; }
+    #page.home > header section.center a.logo img {
+      width: 100%;
+      height: auto; } }
 @media only screen and (max-width: 640px) {
   #page.home > header {
     height: 48px;
@@ -1659,7 +1760,7 @@ section.map_full {
       -moz-transform-style: preserve-3d;
       transform-style: preserve-3d; }
       #page.events section#agenda a.date > section.date {
-        width: 160px;
+        width: 170px;
         text-align: right;
         margin-top: 10px; }
         #page.events section#agenda a.date > section.date time.day {
@@ -1973,10 +2074,12 @@ section.map_full {
     #page.events section#agenda a.date {
       height: 54px; }
       #page.events section#agenda a.date > section.date {
-        margin-top: 6px; }
+        margin-top: 6px;
+        width: 25%; }
         #page.events section#agenda a.date > section.date time.date,
         #page.events section#agenda a.date > section.date time.day {
-          display: none; }
+          display: none;
+          padding-right: 5px; }
         #page.events section#agenda a.date > section.date time.mobile {
           display: block; }
           #page.events section#agenda a.date > section.date time.mobile.day {
@@ -1985,11 +2088,12 @@ section.map_full {
             font-size: 1.0em; }
       #page.events section#agenda a.date > section.title {
         margin-top: 6px;
-        width: 82%; }
+        width: 75%; }
         #page.events section#agenda a.date > section.title div.container {
           height: 42px; }
           #page.events section#agenda a.date > section.title div.container h1 {
-            font-size: 1.25em; }
+            font-size: 1.25em;
+            padding-left: 5px; }
       #page.events section#agenda a.date > section.location {
         display: none; }
   #page.events article.event header {
@@ -2233,7 +2337,10 @@ section.map_full {
         display: block;
         height: 67px;
         position: relative;
-        cursor: pointer; }
+        cursor: pointer;
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        transform-style: preserve-3d; }
         #page.celebrations #speakers article.celebrationInfo .info a:hover {
           background-color: rgba(235, 235, 235, 0.5);
           text-decoration: none; }
@@ -2251,9 +2358,16 @@ section.map_full {
           font-size: 1.2em;
           line-height: 1.2em;
           padding-left: 5px;
-          padding-top: 22px;
           display: inline-block;
-          vertical-align: top; }
+          vertical-align: top;
+          width: 290px;
+          position: relative;
+          z-index: 0;
+          top: 50%;
+          -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+          padding-top: 0; }
         #page.celebrations #speakers article.celebrationInfo .info a div.arrow {
           position: absolute;
           width: 15px;
@@ -2361,7 +2475,11 @@ section.map_full {
             background-size: contain;
             margin-top: 10px; }
           #page.celebrations #speakers article.celebrationInfos article.celebrationInfo .info a span {
-            margin-top: 10px; }
+            padding-top: 0;
+            position: absolute;
+            left: 50px;
+            right: 30px;
+            width: auto; }
   #page.celebrations #description {
     margin-top: 30px;
     margin-bottom: 30px; }
@@ -2477,7 +2595,7 @@ h1.titlePage {
   h1.titlePage span {
     border: 3px solid #363331;
     padding: 8px 12px 0px 12px;
-    display: inline-block;
+    display: inline;
     line-height: 1.1em; }
   @media only screen and (max-width: 640px) {
     h1.titlePage {
