--- a/web/sass/layoutNew.scss
+++ b/web/sass/layoutNew.scss
@@ -104,7 +104,7 @@ h1 {
         span {
             border: 3px solid $grayDarkGC;
             padding: 8px 12px 0px 12px;
-            display: inline-block;
+            display: inline;
             line-height: 1.1em;
         }
 
